--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,11 +3,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--primary-background-color);
-
+    z-index: 100;
+    
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -43,7 +43,7 @@
   }
 
   .mobile-menu__nav {
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
 
   .mobile-menu__item:not(:last-child) {
