--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,10 +1,16 @@
+// @media screen and (max-width: 479px) {
+//   .modal {
+//     width: calc(100% - 30px);
+//   }
+// }
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--secondary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -35,5 +41,12 @@
   &:hover,
   &:focus {
     fill: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
   }
 }
