--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -1,9 +1,18 @@
 .section-title {
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
     margin-bottom: 50px;
-  
-    font-weight: 700;
+
     font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
+    line-height: 1.17;
   }
+}
