--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,38 +1,60 @@
-.advantages-set {
+.advantages-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.advantages-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+.advantages-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: center;
+
+  margin-bottom: 10px;
+}
+
+.advantages-text {
+  height: 50px;
+  color: var(--secondary-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-set {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
   }
-  
+
+  .advantages-item {
+    flex-basis: calc((100% - 30px) / 2);
+
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .advantages-item {
     flex-basis: calc((100% - 90px) / 4);
   }
-  
-  .advantages-icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    height: 120px;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    margin-bottom: 30px;
-  }
-  
-  .advantages-title {
-    margin-bottom: 10px;
-  
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  }
-  
+
   .advantages-text {
-    color: var(--secondary-color);
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
+    height: 100%;
   }
+}
