--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,23 +4,17 @@
   background-color: var(--accent-background-color);
 }
 
-.footer-content {
-  display: flex;
-  align-items: baseline;
-}
-
 .footer-main {
-  display: inline-block;
+  text-align: center;
 }
 
 .footer-address {
-  width: 231px;
-  margin-right: 70px;
   margin-top: 20px;
+  margin-bottom: 60px;
 }
 
 .footer-address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .footer-address__link {
@@ -28,7 +22,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.71;
   letter-spacing: 0.03em;
 
   transition: color var(--transition-dur-and-funk);
@@ -43,8 +37,19 @@
   }
 }
 
+.footer-networks {
+  margin-bottom: 60px;
+}
+
+.footer-networks__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer-networks__title,
 .footer-mailing__title {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -54,10 +59,8 @@
   margin-bottom: 20px;
 }
 
-.footer-networks__list {
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
+.footer-networks__link:not(:last-child) {
+  margin-right: 10px;
 }
 
 .footer-networks__box {
@@ -81,23 +84,15 @@
   fill: var(--selection-color);
 }
 
-.footer-mailing {
-  margin-left: auto;
-}
-
-.footer-mailing-form {
-  display: flex;
-}
-
 .footer-mailing-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: var(--accent-background-color);
-  margin-right: 12px;
   padding-left: 16px;
+  margin-bottom: 20px;
 
   &:focus {
     font-weight: 400;
@@ -118,31 +113,82 @@
 }
 
 .footer-mailing-form__button {
-  position: relative;
-
-  width: 200px;
+  display: flex;
+  align-items: center;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--selection-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px var(--box-shadow-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px 62px 10px 28px;
-
-  &:hover,
-  &:focus {
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px var(--box-shadow-color);
-    border-radius: 4px;
-  }
+  padding: 10px 28px 10px 31px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-mailing-form__icon {
-  position: absolute;
-  top: 13px;
   margin-left: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tablet {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .footer-mailing-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-mailing-form__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-content {
+    display: flex;
+  }
+
+  .footer-main {
+    text-align: start;
+  }
+
+  .footer-address {
+    width: 231px;
+    margin-right: 70px;
+    margin-bottom: 0;
+  }
+
+  .footer-address__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
+
+  .footer-networks__title,
+  .footer-mailing__title {
+    text-align: start;
+  }
+
+  .footer-networks {
+    margin-bottom: 0;
+  }
+
+  .footer-mailing {
+    margin-left: auto;
+  }
+
+  .footer-mailing-form {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .footer-mailing-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
