--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -39,7 +39,7 @@
 .overlay {
   min-height: 400px;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/mobile/mobile-hero.jpg);
+    url(../images/mobile/mobile-hero.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -49,14 +49,14 @@
   screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/mobile/mobile-hero@2x.jpg');
+      url('../images/mobile/mobile-hero@2x.jpg');
   }
 }
 
 @media screen and (min-width: 768px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/tablet/tablet-hero.jpg');
+      url('../images/tablet/tablet-hero.jpg');
   }
 }
 
@@ -65,7 +65,7 @@
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/tablet/tablet-hero@2x.jpg');
+      url('../images/tablet/tablet-hero@2x.jpg');
   }
 }
 
@@ -87,10 +87,9 @@
   }
 
   .overlay {
-    max-width: 1600px;
     min-height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/desktop/desktop-hero.jpg');
+      url('../images/desktop/desktop-hero.jpg');
   }
 }
 
@@ -99,6 +98,6 @@
   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .overlay {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/desktop/desktop-hero@2x.jpg');
+      url('../images/desktop/desktop-hero@2x.jpg');
   }
 }
