--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,37 +1,43 @@
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
+}
+
 .work {
-    padding-bottom: 94px;
-  }
-  
-  .work-set {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-  
-  .work-item {
-    position: relative;
-  
-    flex-basis: calc((100% - 60px) / 3);
-  }
-  
-  .work-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-  }
-  
-  .work-text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  
-    color: var(--selection-color);
-  }
+  padding-bottom: 94px;
+}
+
+.work-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.work-item {
+  position: relative;
+
+  flex-basis: calc((100% - 60px) / 3);
+}
+
+.work-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.work-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--selection-color);
+}
