--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,6 +9,9 @@
 
   opacity: 1;
   transition: opacity var(--transition-dur-and-funk), visibility var(--transition-dur-and-funk);
+
+  padding: 93px 15px;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
