--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -4,7 +4,6 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
     background-color: var(--primary-background-color);
     z-index: 100;
     
@@ -22,6 +21,9 @@
 
   .mobile-menu__container {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     padding-left: 40px;
     padding-top: 48px;
     padding-bottom: 48px;
@@ -43,7 +45,7 @@
   }
 
   .mobile-menu__nav {
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
 
   .mobile-menu__item:not(:last-child) {
@@ -84,6 +86,7 @@
 
   .mobile-menu__social {
     display: flex;
+    flex-wrap: wrap;
     position: relative;
   }
 
