--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,24 +1,24 @@
-// @media screen and (max-width: 479px) {
-//   .modal {
-//     width: calc(100% - 30px);
-//   }
-// }
-
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  width: 450px;
-  height: 609px;
+  position: relative;
   background-color: var(--secondary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
 
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform var(--transition-dur-and-funk);
+  @media screen and (min-width: 480px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 450px;
+    width: 100%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  @media screen and (min-width: 1200px) {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-button-close {
@@ -41,12 +41,5 @@
   &:hover,
   &:focus {
     fill: var(--accent-color);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .modal {
-    min-width: 528px;
-    min-height: 581px;
   }
 }
